# openvino

.github/workflows/: build_doc_all.yml
docs/: CMakeLists.txt  index.md
docs/doxygen/: ie_c_api.config  ie_docs.config  ie_docs.xml  ie_plugin_api.config  ie_py_api.config  ie_py_api.xml  log.py
docs/nGraph_DG/: nGraphTransformation.md
